# sqlinjection

./: README.md  pyproject.toml
src/sqlinjection/: errors.py  sql_injection.py
