[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlinjection"
version = "0.0.3"
authors = [
  { name="Alejandro Martinez", email="aegloszenit@protonmail.ch" },
]
description = "Sql injection detector"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zenitaeglos/sqlinjection"
Issues = "https://github.com/zenitaeglos/sqlinjection/issues"